# z4d-certified-devices

./: .flake8  .gitignore  AGENT.md  CLAUDE.md  README.md  bump_version.py  pyproject.toml  requirements-dev.txt  setup.cfg  yank_old_versions.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: certified-device-model.md
.github/workflows/: build.yml  bump_version.yml  ci-cd.yml  claude-issue-triage.yml  lint_json.yml  publish.yml
tests/: tests_loader.py
z4d_certified_devices/: __init__.py  version.py
z4d_certified_devices/Certified/: Excellux.json
z4d_certified_devices/Certified/Adeo/: LDSENK01F.json  LDSENK08.json  SIN-4-1-20_LEX.json  SIN-4-FP-21_EQU.json  SIN-4-RS-20_LEX.json  ZBEK-13.json  ZBEK-14.json
z4d_certified_devices/Certified/Aeotec/: aeotec-water.json
z4d_certified_devices/Certified/Airzone/: Aidoo Zigbee.json
z4d_certified_devices/Certified/Aotec/: WG001-Z01.json
z4d_certified_devices/Certified/Awox/: EGLO_ZM_RGB_TW.json  TLSR82xx.json
z4d_certified_devices/Certified/Bitron/: 90201022.json
z4d_certified_devices/Certified/CLEODE/: ZMOVE.json
z4d_certified_devices/Certified/Candeo/: Candeo Zigbee Dimmer.json
z4d_certified_devices/Certified/Casa.ia/: CAC221.json  CPR412-E.json
z4d_certified_devices/Certified/Chameleon/: ERL Z3.json  MWA1-TIC.json
z4d_certified_devices/Certified/Custom/: LYWSD03MMC.json
z4d_certified_devices/Certified/Danfoss/: RV001.json  eT093WRG.json  eT093WRO.json  eTRV0100.json
z4d_certified_devices/Certified/Develco/: EMIZB-141.json  IOMZB-110.json  KEPZB-110.json  SPLZB-131.json
(+381 files in other folders)
