[metadata]
name = z4d-certified-devices
version = attr: z4d_certified_devices.version.__version__
url=https://github.com/zigbeefordomoticz/z4d-certified-devices
description="Certified devices for Zigbee for Domoticz plugin"
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
author="Patrick Pichon"
author_email="patrick@pichon.me"
license="GPL-3.0"
python_requires=">=3.7"
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True

[options.package_data]
z4d_certified_devices = Certified/**/*.json
* = README.md, LICENSE
